updated to Fable Elmish

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,6 +4,9 @@ $primary: $purple
 $black: #202020
 
 @import '../node_modules/bulma/bulma'
+@import '../node_modules/bulma-calendar/calendar.sass'
+@import '../node_modules/bulma-slider/slider.sass'
+
 
 .navbar-bg
   background-color: $black
